# Quanticade

./: .gitignore  CMakeLists.txt  Makefile  README.md  huginn.nnue  main.c  net1.nnue  net2.nnue  nn.nnue
.cache/clangd/index/: consts.h.59E5577F2C928B51.idx  enums.h.49795B49403263A9.idx  macros.h.55C9AAC6EED6A478.idx  misc.cpp.2696076251AC101B.idx  misc.h.2AB8CA45391A4F3C.idx  nnue.cpp.85A16D926AF5A2F5.idx  nnue.h.767D63B40C92A508.idx  nnue_consts.h.836D881F0EAE2449.idx  quanticade.c.4A00332174B21D80.idx  quanticade.h.3B42062EDC987309.idx  structs.h.ECE478EA20E4F78B.idx  uci.c.9D7493BD69BC8FD4.idx  uci.h.98A6D181E893386D.idx  utils.c.7DB331F69A31CCAE.idx  utils.h.25B2F5A966B09506.idx
.github/workflows/: c-cpp.yml  linux.yml  windows.yml
.zed/: debug.json
Source/: arch.h  attacks.c  attacks.h  bitboards.h  checkinfo.h  consts.h  datagen.c  datagen.h  engine.h  enums.h  evaluate.c  evaluate.h  history.c  history.h  macros.h  move.c  move.h  movegen.c  movegen.h  movepicker.c  movepicker.h  nnue.c  nnue.h  nnue_consts.h  perft.c  perft.h  pvtable.c  pvtable.h  quanticade.c  quanticade.h  quiet_history.h  search.c  search.h  see.c  see.h  simd.h  spsa.c  spsa.h  stats.c  stats.h  (+13 more)
Source/nnue/: CMakeLists.txt  misc.cpp  misc.h  nnue.cpp  nnue.h
Source/pyrrhic/: CMakeLists.txt  tbconfig.h
Tools/: process_net.c  sign_network.sh
src/: quanticade.c  quanticade.c.new
